feat: add smooth support